# py-starter

./: .env.example  .gitignore  README.md  app.py  boot.py  pyproject.toml  requirements.txt
.scripts/: mypy.ini  mypy.sh
src/: __init__.py  config.py  daily_file_handler.py  filesystem.py  main.py  utils.py
src/app/: main.py
src/cache/: redis.py
src/db/: async_mongo.py  async_mysql.py  mongo.py  store.py
src/filesystem/: cloud_storage_interface.py  file_manager.py  providers.py
src/filesystem/adapters/: do_storage.py  local_storage.py  s3_compatible_storage.py  s3_storage.py
src/logging/: daily_file_handler.py
src/models/: api_request.py  base_request.py
src/report/: notify.py
src/schedule/: async_scheduler.py  example_usage.py  tasks.py
src/schedule/stub/: README.md
src/schedule/stub/supervisor/: scheduler.conf
src/schedule/stub/systemd/: scheduler.service
src/utils/: __init__.py  performance.py
